Zwischencommit - "NachAdresse" umbenannt in "ZuAdresse" - Fehler behoben: in der Übersicht (Index) wurde bei "Zu Adresse" immer der Vorname von "Von Adresse" angezeigt

--- a/BlazorUmzugsAppTest/Pages/Details.razor
+++ b/BlazorUmzugsAppTest/Pages/Details.razor
@@ -37,11 +37,11 @@
                 <MudText>Zu Adresse</MudText>
             </MudCardHeader>
             <MudCardContent>
-                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.NachAdresse.Vorname" Label="Vorname" Variant="Variant.Outlined"></MudTextField>
-                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.NachAdresse.Nachname" Label="Nachname" Variant="Variant.Outlined"></MudTextField>
-                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.NachAdresse.Strasse" Label="Strasse" Variant="Variant.Outlined"></MudTextField>
-                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.NachAdresse.Plz" Label="Plz" Variant="Variant.Outlined"></MudTextField>
-                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.NachAdresse.Ort" Label="Ort" Variant="Variant.Outlined"></MudTextField>
+                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.ZuAdresse.Vorname" Label="Vorname" Variant="Variant.Outlined"></MudTextField>
+                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.ZuAdresse.Nachname" Label="Nachname" Variant="Variant.Outlined"></MudTextField>
+                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.ZuAdresse.Strasse" Label="Strasse" Variant="Variant.Outlined"></MudTextField>
+                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.ZuAdresse.Plz" Label="Plz" Variant="Variant.Outlined"></MudTextField>
+                <MudTextField Margin="Margin.Dense" Class="mb-2" @bind-Value="_angebot.ZuAdresse.Ort" Label="Ort" Variant="Variant.Outlined"></MudTextField>
             </MudCardContent>
         </MudCard>
     </div>
